--- a/foundation/translations/fr.json
+++ b/foundation/translations/fr.json
@@ -33,7 +33,9 @@
     "Locked": "Verrouillé",
     "Unlocked": "Déverrouillé",
     "Verified": "Vérifié",
+    "Enabled": "Activé",
     "Activated": "Activé",
+    "Disabled": "Désactivé",
     "Deactivated": "Désactivé",
 
     "No data": "Aucune donnée",
